# taxos

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr.yml
apps/api/: pyproject.toml
apps/api/taxos_api/: deps.py  errors.py  main.py
apps/api/taxos_api/routers/: agent_runs.py  audit.py  batches.py  calendar.py  computations.py  dashboards.py  knowledge.py  risk.py  work_items.py
apps/frontend/: next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
docs/: README.md
docs/ai/: 01-framework-evaluation.md  02-agent-system-design.md  03-core-agents.md  04-extended-agents.md  05-agent-evaluation.md  README.md
docs/architecture/: 01-architecture-overview.md  02-container-architecture.md  03-component-architecture.md  04-data-architecture.md  05-eventing-and-async.md  06-api-design.md  07-security-architecture.md  08-deployment-and-cloud.md  09-observability.md  10-sequence-diagrams.md  README.md
docs/assets/: evidence-pack-sample.html
docs/backend/: 01-repository-structure.md  02-application-architecture.md  03-persistence.md  04-async-tasks.md  05-api-standards.md  06-testing.md  07-local-dev.md  README.md
docs/business/: business-case.md  executive-presentation.md
docs/cloud/: 01-terraform.md  02-network-identity.md  03-environments-and-promotion.md  04-kubernetes-target.md  05-operations.md  README.md
docs/discovery/: 01-business-problem-and-market.md  02-competitive-landscape.md  03-user-personas.md  04-requirements.md  05-roadmap.md  06-user-stories-and-backlog.md  07-mvp-and-enterprise-scope.md  README.md
docs/frontend/: 01-design-system.md  02-information-architecture.md  03-flagship-screens.md  04-page-catalogue.md  05-frontend-architecture.md  README.md
docs/github/: repo-plan.md
docs/guides/: deployment-guide.md  developer-guide.md  maintenance-guide.md  user-manual.md
docs/knowledge/: 01-corpus-and-ingestion.md  02-chunking-and-embedding.md  03-retrieval.md  04-knowledge-graph.md  05-citations-and-grounding.md  README.md
docs/ml/: 01-ml-problem-map.md  02-fraud-anomaly-detection.md  06-mlops.md  (+4 more)
migrations/: env.py
src/taxos_contracts/: pyproject.toml
src/taxos_contracts/taxos_contracts/: __init__.py  compliance.py  ingestion.py  problem.py  workflow.py
src/taxos_core/: pyproject.toml
src/taxos_core/taxos_core/: __init__.py  models_registry.py
src/taxos_core/taxos_core/agents/: __init__.py  envelopes.py  models.py  specialists.py  supervisor.py
src/taxos_core/taxos_core/audit/: __init__.py  hashing.py  models.py  verify.py
src/taxos_core/taxos_core/compliance/: __init__.py  engine.py  formula.py  models.py  pack.py  service.py
src/taxos_core/taxos_core/ingestion/: __init__.py  models.py  rules.py  service.py
src/taxos_core/taxos_core/knowledge/: __init__.py  corpus.py  models.py  service.py
src/taxos_core/taxos_core/masterdata/: __init__.py  models.py  service.py
src/taxos_core/taxos_core/ml/: __init__.py  explain.py  features.py  model.py  scoring.py  supervised.py  synth.py
src/taxos_core/taxos_core/reporting/: __init__.py  calendar.py  evidence.py  service.py
src/taxos_core/taxos_core/risk/: __init__.py  detectors.py  models.py  service.py
src/taxos_core/taxos_core/shared/: config.py
src/taxos_core/taxos_core/shared/events/: __init__.py  models.py
src/taxos_core/taxos_core/shared/persistence/: __init__.py  base.py  session.py  uow.py
src/taxos_core/taxos_core/workflow/: __init__.py  models.py  service.py  states.py
tests/: conftest.py  test_agents.py  test_api_audit.py  test_api_computation.py  test_api_ingestion.py  test_api_workflow.py  test_calendar.py  test_computation.py  test_engine.py  test_evidence.py  test_formula.py  test_health.py  test_ingestion.py  test_invariants.py  test_knowledge.py  test_ml.py  test_model_registry.py  test_risk.py  test_supervised.py  test_workflow.py
(+77 files in other folders)
