[project]
name = "taxos-contracts"
version = "0.1.0"
description = "TaxOS shared contracts — Pydantic models only, no other dependencies (Phase 6 doc 01 rule)"
requires-python = ">=3.12"
dependencies = ["pydantic>=2.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["taxos_contracts"]
