[project]
name = "taxos-core"
version = "0.1.0"
description = "TaxOS domain core — modules, persistence, engine. NO LLM SDKs (AP-2, CI-enforced)."
requires-python = ">=3.12"
dependencies = [
    "taxos-contracts",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "redis>=5.0",
]

[tool.uv.sources]
taxos-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["taxos_core"]
